fix: text area dark mode

--- a/src/styles/theming/field.sass
+++ b/src/styles/theming/field.sass
@@ -27,3 +27,6 @@
   --cyan-border-color-field-active: var(--chroma-secondary-h)
   --cyan-border-color-field-disabled: var(--chroma-secondary-h)
   --cyan-border-color-field-error: var(--chroma-alert)
+  .rise-a, .rise.b, rise-c, rise-d
+    --cyan-background-field: var(--chroma-secondary-a)
+    --cyan-background-field-active: var(--chroma-secondary-a)
